--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Halaman Utama</h1>
-    <p>Selamat datang di halaman utama!</p>
+    <p>Selamat datang di halaman utama</p>
     <a href="halaman1.html">Ke Halaman 1</a>
     <a href="halaman2.html">Ke Halaman 2</a>
     <a href="halaman3.html">Ke Halaman 3</a>
